# Webcore

./: .gitignore  Cargo.toml  README-temp.md  README.md  grammar.pest  tech.md
examples/: advanced.webc  basic.webc  hello.webc  minimal.webc  simple.webc  state_only.webc  webc.toml
my-app/: theme.toml  webc.toml
my-app/src/: app.webc
my-app/src/components/: Brand.webc  Test.webc
my-app/src/layouts/: default.webc
my-app/src/pages/: About.webc  Counter.webc  Home.webc
src/: ast.rs  codegen.rs  config.rs  lib.rs  main.rs  parser.rs  transformers.rs
webcore-compiler/: Cargo.toml
webcore-compiler/src/: ast.rs  css_processor.rs  main.rs  parser.rs  theme.rs
webcore-compiler/src/codegen/: codegen_css.rs  codegen_html.rs  codegen_js.rs
