[package]
name = "webcore_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.4", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
notify = "6.1"
tiny_http = "0.12"
# Note: Transformers (SWC/LightningCSS) are left as optional integrations later.
