[package]
name = "webcore-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
lightningcss = "1.0.0-alpha.67"
notify = "8.2.0"
tiny_http = "0.12"
open = "5"
qrcode = "0.14"
image = { version = "0.24", default-features = false, features = ["png", "ico"] }
